--- a/android/AndroidManifest.xml
+++ b/android/AndroidManifest.xml
@@ -10,6 +10,7 @@
         android:label="@string/app_name"
         android:theme="@style/GdxTheme" >
         <activity
+            android:exported="true"
             android:name="com.mygdx.game.AndroidLauncher"
             android:label="@string/app_name" 
             android:screenOrientation="portrait"
